--- a/app/src/main/res/menu/register_menu.xml
+++ b/app/src/main/res/menu/register_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_cut"
+            android:id="@+id/ic_menu_add"
             android:title="Register"
-            app:showAsAction="ifRoom"
+            app:showAsAction="always"
             android:icon="@drawable/ic_menu_add"
     />
 </menu>
