--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="colorAccent">#e65100</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorDivider">#b7b7b7</color>
+    <color name="colorGrayTextView">#6e6e6e</color>
+    <color name="colorDarkTextView">#111111</color>
 
 </resources>
