--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="default_small_margin">4dp</dimen>
     <dimen name="default_margin">8dp</dimen>
+    <dimen name="default_medium_margin">12dp</dimen>
     <dimen name="extra_large_margin">32dp</dimen>
+    <dimen name="font_size_text_small">12sp</dimen>
+    <dimen name="font_size_default">14sp</dimen>
 </resources>
